# FeaturizersLibrary

./: .gitignore  .gitmodules  Activate_custom.py  README.md  Readme.md  Readme.rst  ScmHook_custom.py  Setup.cmd  Setup_custom.py  __RepositoryId__  bootstrap.cmd  bootstrap.sh  bootstrap_impl.py
src/FeaturizerPrep/SharedLibrary/: Build.py  CMakeLists.txt  Featurizers.in.json  PointerTable.h  SharedLibrary_DateTimeFeaturizerCustom.cpp  SharedLibrary_DateTimeFeaturizerCustom.h  SharedLibrary_RobustScalarFeaturizerCustom.cpp  SharedLibrary_RobustScalarFeaturizerCustom.h  SharedLibrary_TimeSeriesImputerFeaturizer.cpp  SharedLibrary_TimeSeriesImputerFeaturizer.h
src/Featurizers/: AnalyticalRollingWindowFeaturizer.h  BackwardFillImputerFeaturizer.h  CMakeLists.txt  CatImputerFeaturizer.h  CountVectorizerFeaturizer.cpp  CountVectorizerFeaturizer.h  DateTimeFeaturizer.cpp  DateTimeFeaturizer.h  ForecastingPivotFeaturizer.h  ForwardFillImputerFeaturizer.h  FromStringFeaturizer.h  HashOneHotVectorizerFeaturizer.h  ImputationMarkerFeaturizer.h  InverseDocumentFrequencyEstimator.h  L1NormalizeFeaturizer.h  L2NormalizeFeaturizer.h  LabelEncoderFeaturizer.h  LagLeadOperatorFeaturizer.h  MaxAbsScalarFeaturizer.h  MaxAbsScalerFeaturizer.h  MaxNormalizeFeaturizer.h  MeanImputerFeaturizer.h  MedianImputerFeaturizer.h  MinMaxImputerFeaturizer.h  MinMaxScalarFeaturizer.h  MinMaxScalerFeaturizer.h  MissingDummiesFeaturizer.h  ModeImputerFeaturizer.h  NormalizeFeaturizer.h  NumericalizeFeaturizer.h  OneHotEncoderFeaturizer.h  PCAFeaturizer.h  RobustScalarFeaturizer.h  RobustScalerFeaturizer.h  SampleAddFeaturizer.cpp  SampleAddFeaturizer.h  SampleSequenceSumFeaturizer.h  ShortGrainDropperFeaturizer.cpp  ShortGrainDropperFeaturizer.h  SimpleRollingWindowFeaturizer.h  (+10 more)
src/Featurizers/Base/: NormalizeFeaturizer.h  RollingWindowTransformerBase.h
src/Featurizers/Calculators/: Calculators.h  MaxCalculator.h  MeanCalculator.h  MinCalculator.h  SumCalculator.h  code_coverage.yaml
src/Featurizers/Components/: AnalyticalRollingWindowTransformer.h  CircularBuffer.h  Components.h  DocumentStatisticsEstimator.cpp  DocumentStatisticsEstimator.h  FilterDecoratorFeaturizer.h  FilterFeaturizerImpl.h  FilterSinkFeaturizer.h  FrequencyEstimator.h  FrequencyMinimumEstimator.h  GlobalMinimumFrequencyEstimator.h  GrainEstimatorImpl.h  GrainFeaturizerImpl.h  HistogramEstimator.h  ImputerTransformer.h  IndexMapEstimator.h  InferenceOnlyFeaturizerImpl.h  InverseDocumentFrequencyEstimator.h  MatrixDecompositionEstimator.h  MaxAbsValueEstimator.h  MedianEstimator.h  MinMaxEstimator.h  ModeEstimator.h  NormEstimator.h  NormUpdater.h  NormUpdaters.h  OrderEstimator.h  PipelineExecutionEstimatorImpl.h  RobustScalarNormEstimator.h  RollingWindowTransformerBase.h  StandardDeviationEstimator.h  StandardDeviationUpdater.h  StatisticalMetricsEstimator.h  StatisticsMetricsEstimator.h  TimeSeriesFrequencyEstimator.h  TimeSeriesImputerTransformer.h  TimeSeriesMedianEstimator.h  TrainingOnlyEstimatorImpl.h  VectorNormsEstimator.h  WindowFeaturizerBase.h  (+2 more)
src/Featurizers/NormalizeFeaturizerBase/: NormalizeFeaturizer.h
src/Featurizers/UnitTests/: AnalyticalRollingWindowFeaturizer_UnitTest.cpp  BackwardFillImputerFeaturizer_UnitTest.cpp  CMakeLists.txt  CatImputerFeaturizer_UnitTests.cpp  CountVectorizerFeaturizer_UnitTests.cpp  DateTimeFeaturizer_UnitTests.cpp  ForecastingPivotFeaturizer_UnitTests.cpp  ForwardFillImputerFeaturizer_UnitTest.cpp  FromStringFeaturizer_UnitTest.cpp  HashOneHotVectorizerFeaturizer_UnitTests.cpp  ImputationMarkerFeaturizer_UnitTests.cpp  InverseDocumentFrequencyEstimator_UnitTests.cpp  LabelEncoderFeaturizer_UnitTests.cpp  LagLeadOperatorFeaturizer_UnitTests.cpp  MaxAbsScalarFeaturizer_UnitTests.cpp  MaxAbsScalerFeaturizer_UnitTests.cpp  MeanImputerFeaturizer_UnitTest.cpp  MedianImputerFeaturizer_UnitTest.cpp  MinMaxImputerFeaturizer_UnitTest.cpp  MinMaxScalarFeaturizer_UnitTests.cpp  MinMaxScalerFeaturizer_UnitTests.cpp  MissingDummiesFeaturizer_UnitTests.cpp  ModeImputerFeaturizer_UnitTest.cpp  NormalizeFeaturizer_UnitTests.cpp  NumericalizeFeaturizer_UnitTests.cpp  OneHotEncoderFeaturizer_UnitTests.cpp  PCAFeaturizer_UnitTests.cpp  RobustScalarFeaturizer_UnitTests.cpp  RobustScalerFeaturizer_UnitTests.cpp  SampleSequenceSumFeaturizer_UnitTests.cpp  ShortGrainDropperFeaturizer_UnitTests.cpp  SimpleRollingWindowFeaturizer_UnitTest.cpp  StandardScaleWrapperFeaturizer_UnitTest.cpp  StandardScalerFeaturizer_UnitTest.cpp  StringFeaturizer_UnitTest.cpp  Structs_UnitTest.cpp  TfidfVectorizerFeaturizer_UnitTests.cpp  TimeSeriesImputerFeaturizer_UnitTest.cpp  TruncatedSVDFeaturizer_UnitTests.cpp
src/Featurizers/cmake/: FeaturizersCode.cmake
src/SharedLibrary/IntegrationTests/: CMakeLists.txt  SharedLibrary_AnalyticalRollingWindow_IntegrationTest.cpp  SharedLibrary_BackwardFillImputer_IntegrationTest.cpp  SharedLibrary_CatImputerFeaturizer_IntegrationTest.cpp  SharedLibrary_CountVecFeaturizer_IntegrationTest.cpp  SharedLibrary_DateTimeFeaturizer_IntegrationTest.cpp  SharedLibrary_DateTime_IntegrationTest.cpp  SharedLibrary_ForecastingPivot_IntegrationTest.cpp  SharedLibrary_ForwardFillImputer_IntegrationTest.cpp  SharedLibrary_FromStringFeaturizer_IntegrationTest.cpp  SharedLibrary_FromString_IntegrationTest.cpp  SharedLibrary_HOHVFeaturizer_IntegrationTest.cpp  SharedLibrary_HashOneHotVectorizer_IntegrationTest.cpp  SharedLibrary_IMFeaturizer_IntegrationTest.cpp  SharedLibrary_ImputationMarker_IntegrationTest.cpp  SharedLibrary_L1Normalize_IntegrationTest.cpp  SharedLibrary_L2Normalize_IntegrationTest.cpp  SharedLibrary_LEFeaturizer_IntegrationTest.cpp  SharedLibrary_LagLeadOperator_IntegrationTest.cpp  SharedLibrary_MASFeaturizer_IntegrationTest.cpp  SharedLibrary_MDFeaturizer_IntegrationTest.cpp  SharedLibrary_MMIFeaturizer_IntegrationTest.cpp  SharedLibrary_MMSFeaturizer_IntegrationTest.cpp  SharedLibrary_MaxNormalize_IntegrationTest.cpp  SharedLibrary_MeanIFeaturizer_IntegrationTest.cpp  (+17 more)
src/UnitTests/: Archive_UnitTest.cpp  CMakeLists.txt  Featurizer_UnitTest.cpp  Strings_UnitTest.cpp  Traits_UnitTest.cpp
(+589 files in other folders)
